docs(tags): Update content

--- a/source/_posts/두 점수를 비교하다.md
+++ b/source/_posts/두 점수를 비교하다.md
@@ -1,7 +1,7 @@
 ---
 title: 알고리즘 문제 풀이 - 두 점수를 비교하다
 categories: javascript
-tags: array, algorithms, 배열, 알고리즘
+tags: [array, algorithms, 배열, 알고리즘]
 date: 2018-01-22 17:30:27
 thumbnail: https://user-images.githubusercontent.com/7262465/35211598-7e19ef04-ff9a-11e7-8202-33ebd288076e.png
 ---
