--- a/source/_posts/부동-소수점-연산.md
+++ b/source/_posts/부동-소수점-연산.md
@@ -2,7 +2,7 @@
 title: 부동 소수점 연산
 date: 2018-11-04 15:37:04
 categories: javascript
-tags: floating point arithmetic
+tags: [floating, js, calculator]
 thumbnail:
 ---
 
